--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 
 .sub_menu {
   background-color: #fafafa;
-  border: 1px solid gray;
+  border-top: 1px solid gray;
   margin: 50px 0 0 0;
   font-size: 13px;
   color: #666;
@@ -82,7 +82,7 @@ body {
 
 .price,
 .casting {
-  width: 600px;
+  width: 800px;
   margin: 0 auto;
 }
 
@@ -113,3 +113,32 @@ body {
   color: white;
   margin: 20px 0;
 }
+
+/* media query */
+@media screen and (max-width: 360px) {
+    #model {
+      width: 320px;
+      left: 50%;      /* 왼쪽 위치: 화면의 중앙*/
+      margin-left: -160px;   /* 왼쪽 여백 : 사진의 1/2 더 왼쪽으로 */
+    }
+    #model img {
+      width: 100%;
+    }   
+    .menu a, .sub_menu a{
+      font-size: 14px;
+      letter-spacing: -1px;   /* 자간 : 글자간격 좁게 */
+    }
+    .price , .casting {
+      width: 83%;  /* 총 360px에 300px 크기는 몇 % 일까요? */
+    }
+    .price th, .casting th{
+      width: 25%;
+    }
+    .price th, .price td, .casting th, casting td {
+      font-size: 14px;
+      letter-spacing: -1px;
+    }
+    
+    
+
+ }  
